@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>esa</groupId>
   <artifactId>esadb</artifactId>
-  <version>2.0.6</version>
+  <version>2.0.7-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>esadb</name>
   <description>esadb - Eine Alternative zu HAWEV</description>
